[package]
name = "duckdb-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version="0.6.0", features=["bundled"] }
cxx = "1.0"

# These are duckdb dependencies that we access directly
arrow = { version = "*", default-features = false, features = ["prettyprint", "ffi"] }
hashlink = { version = "*" }

[build-dependencies]
cxx-build = "1.0"
