[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dyn-clone = "1.0.9"
half = "2.1"
object_store = "0.5.0"
tabled = "0.10"
snafu = { version = "0.7.3" }
sqlparser = { path = "../sqlparser-rs" }

[build-dependencies]
cxx-build = "1.0"
