[package]
name = "queryscript"
version = "0.1.0"
edition = "2021"
authors = ["Ankur Goyal <ankrgyl@gmail.com>", "Michael Andrews <09mandrews@gmail.com>"]

[lib]
name = "queryscript"
path = "src/lib.rs"

[[bin]]
name = "qs"
path = "bin/qs.rs"
required-features = ["cli"]

[features]
default = ["cli"]
multi-thread = ["tokio/rt-multi-thread"]
serde = ["dep:serde", "arrow-schema/serde", "half/serde"]
ts = ["serde", "dep:ts-rs"]
cli = ["clap", "home", "rustyline"]

[dependencies]

arrow = { version = "26.0.0", default-features = false, features = [
    "csv",
    "ffi",
    "json",
    "prettyprint",
] }
async-trait = "0.1"
chrono = { version = "0.4.22", default-features = false }
colored = "2"
difference = "2.0"
dyn-clone = "1.0.9"
futures = "0.3"
half = { version = "2.1" }
lazy_static = "1.4.0"
object_store = "0.5.0"
serde = { version = "1", optional = true }
snafu = { version = "0.7.3" }
sqlparser = { path = "../sqlparser-rs" }
tabled = "0.10"
tokio = "1.23"
ts-rs = { version = "6.2", optional = true }
unicase = "2.6.0"
url = "2.3.1"

# We don't import this directly (rather, through "arrow"), but need the serde feature
# to be propagated through to it.
arrow-schema = { version = "*" }
arrow-buffer = { version = "*" }

# This comes via arrow, but we need to access it directly.
parquet = { version = "*" }

# -- ENGINES ---
# TODO: We should put each database dependency runtime behind a feature flag
# DuckDB.
duckdb = { version = "0.6.0", features = ["bundled"] }
cxx = "1.0"
# These are duckdb dependencies that we access directly
hashlink = { version = "*" }

# -- CLI ---
clap = { version = "4.0", features = ["derive"], optional = true }
home = { version = "0.5.4", optional = true }
rustyline = { version = "10.0.0", optional = true }


[dev-dependencies]
sqllogictest = "0.10.0"
strum = { version = "0.24", features = ["derive"] }
walkdir = "2.3.2"

[build-dependencies]
cxx-build = "1.0"
