[package]
name = "qvm-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.17"
tokio = { version = "^1.22", features = [
	"io-util",
	"io-std",
	"macros",
	"rt-multi-thread",
] }
regex = "1"
serde_json = "1"

qvm = { path = "../qvm" }
