[package]
name = "qvm-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "qvm-tools"
# path = "src/main.rs"

[dependencies]
qvm = { path="../qvm" }
rustyline = "10.0.0"
snafu = { version = "0.7.3" , features = [ "backtraces" ] }
