[package]
name = "qvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-buffer = "26.0.0"                                       # This has to be tracked with datafusion
datafusion = { path = "../arrow-datafusion/datafusion/core" } # XXX Can we remove?

async-trait = "0.1"                                       # XXX REMOVE?
chrono = { version = "0.4.22", default-features = false }
colored = "2"
difference = "2.0"
dyn-clone = "1.0.9"                                       # XXX REMOVE?
lazy_static = "1.4.0"
object_store = "0.5.0"
snafu = { version = "0.7.3" }
sqlparser = { path = "../sqlparser-rs" }
tokio = "1.0"

runtime = { path = "../runtime" }
